linux/project/k8s/Jekyll SSG/jekyll.yaml
apiVersion: v1
kind: Service
metadata:
  name: jekyll
  namespace: development
spec:
  type: NodePort
  selector:
    run: jekyll
  ports:
    - port: 8080
      targetPort: 4000
      nodePort: 30097

k run --image gcr.io/kodekloud/customimage/jekyll 
kubectl run jekyll2 -it --image=gcr.io/kodekloud/customimage/jekyll -- jekyll new /site

pod: 'jekyll' has an initContainer, name: 'copy-jekyll-site', image: 'gcr.io/kodekloud/customimage/jekyll'
initContainer: 'copy-jekyll-site', command: [ "jekyll", "new", "/site" ] (command to run: jekyll new /site)
pod: 'jekyll', initContainer: 'copy-jekyll-site', mountPath = '/site'
pod: 'jekyll', initContainer: 'copy-jekyll-site', volume name = 'site'

pod: 'jekyll', container: 'jekyll', image = 'gcr.io/kodekloud/customimage/jekyll-serve'
pod: 'jekyll', container: 'jekyll', volume name = 'site'
pod: 'jekyll', container: 'jekyll', mountPath = '/site'
pod: 'jekyll', uses volume called 'site' with pvc = 'jekyll-site'
pod: 'jekyll' uses label 'run=jekyll'

    # command: ['jekyll', 'new', '/site']

apiVersion: v1
kind: Pod
metadata:
  name: jekyll
  namespace: development
  labels:
    run: jekyll
spec:
  containers:      
  - name: jekyll
    image: gcr.io/kodekloud/customimage/jekyll-serve
    volumeMounts:
    - mountPath: /site
      name: site
  volumes:
  - name: site
    persistentVolumeClaim:
      claimName: jekyll-site
